--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,11 +18,11 @@ layout: default
   <!-- POST NAVIGATION -->
   <div class="postNav clearfix">
     {% if page.previous.url %}
-      <a class="prev{% if page.previous.image %} image{% endif %}" href="{{ page.previous.url | prepend: site.baseurl }}"><span>&laquo;&nbsp;{{ page.previous.title }}</span>
+      <a class="prev image" href="{{ page.previous.url | prepend: site.baseurl }}"><span>&laquo;&nbsp;{{ page.previous.title }}</span>
       {% if page.previous.image %}
         <img src="{{ '/assets/img/' | prepend: site.baseurl | append: page.previous.image }}" alt="">
       {% elsif page.category[0] %}
-        <img src="{{ '/assets/img/' | prepend: site.baseurl | append: page.category[0] }}" alt="">
+        <img src="{{ '/assets/img/' | prepend: site.baseurl | append: page.category[0] | append: '.jpg' }}" alt="">
       {% endif %}
     </a>
     {% endif %}
