--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,18 +20,18 @@ layout: default
     {% if page.previous.url %}
       <a class="prev image" href="{{ page.previous.url | prepend: site.baseurl }}"><span>&laquo;&nbsp;{{ page.previous.title }}</span>
       {% if page.previous.image %}
-        <img src="{{ '/assets/img/' | prepend: site.baseurl | append: page.previous.image }}" alt="">
+        <!-- <img src="{{ '/assets/img/' | prepend: site.baseurl | append: page.previous.image }}" alt=""> -->
       {% elsif page.category[0] %}
-        <img src="{{ '/assets/img/' | prepend: site.baseurl | append: page.category[0] | append: '.jpg' }}" alt="">
+        <!-- <img src="{{ '/assets/img/' | prepend: site.baseurl | append: page.category[0] | append: '.jpg' }}" alt=""> -->
       {% endif %}
     </a>
     {% endif %}
     {% if page.next.url %}
       <a class="next{% if page.next.image %} image{% endif %}" href="{{ page.next.url | prepend: site.baseurl }}"><span>{{ page.next.title }}&nbsp;&raquo;</span>
       {% if page.next.image %}
-        <img src="{{ '/assets/img/' | prepend: site.baseurl | append: page.next.image }}" alt="">
+        <!-- <img src="{{ '/assets/img/' | prepend: site.baseurl | append: page.next.image }}" alt=""> -->
       {% elsif page.category[0] %}
-        <img src="{{ '/assets/img/' | prepend: site.baseurl | append: page.category[0] }}" alt="">
+        <!-- <img src="{{ '/assets/img/' | prepend: site.baseurl | append: page.category[0] }}" alt=""> -->
       {% endif %}
       </a>
     {% endif %}
